common: Support runtime configurations

Add runtime configuration file /run/gdm/custom.conf, making device
dependent configurations possible.

https://bugzilla.gnome.org/show_bug.cgi?id=789081